--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@
     --primary-color: #DDDDDD;
     --secondary-color: #F05454;
 }
+body {
+    background-color: var(--primary-color);
+    text-align: center;
+    color: var(--primary-color);
+    font-family: var(--font);
+    height: 100vh;
+    margin: 0;
+
+}
+
