--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     --bg-color: #222831;
     --primary-color: #DDDDDD;
     --secondary-color: #F05454;
+    --font: "Nunito Sans", sans-serif;
 }
+
 body {
     background-color: var(--primary-color);
     text-align: center;
@@ -15,42 +17,41 @@ body {
 
 }
 
-header{
+header {
     background-color: var(--primary-color);
     text-align: center;
     padding: 1px;
 }
 
-h1{
-    font-size: 2rem
-   colar var(--bg-color);
-   font-weight: 700
+h1 {
+    font-size: 2rem colar var(--bg-color);
+    font-weight: 700
 }
-   
-   nav {
+
+nav {
     display: flex;
     justify-content: center;
-    font-weight: 400; 
-   }
-   
-    nav a {
-        text-decoration: none;
-        color: var(--bg-color);
-        margin: 0 2rem 1rem 0rem;
-        font-size: 1.2rem
-    }
-        
-        ;nav a:hover {
-            text-decoration: underline;
-            transform: scale(0.90);
-            transition: transform 0.1s;
-        }
+    font-weight: 400;
+}
 
-            footer {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                background-color: var(--primary-color);
+nav a {
+    text-decoration: none;
+    color: var(--bg-color);
+    margin: 0 2rem 1rem 0rem;
+    font-size: 1.2rem
+}
+
+nav a:hover {
+    text-decoration: underline;
+    transform: scale(0.90);
+    transition: transform 0.1s;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-color);
     color: var(--bg-color);
     width: 100%;
     height: 3rem;
